apps/displayify/back-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediamtx
  namespace: displayify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediamtx
  template:
    metadata:
      labels:
        app: mediamtx
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: mediamtx
          image: incept1on/displayify:back
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            privileged: true
          imagePullPolicy: Always
          ports:
            - containerPort: 1935
            - containerPort: 1936
            - containerPort: 8889
            - name: webrtc-udp
              containerPort: 8189
              protocol: UDP
          volumeMounts:
            - name: tls
              mountPath: /etc/nginx/pki
              readOnly: true
            - name: rendered
              mountPath: /rendered
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "150m"
              memory: "256Mi"
      volumes:
        - name: tls
          secret:
            secretName: displayify-secrets
            items:
              - key: server.crt
                path: server.crt
              - key: server.key
                path: server.key
        - name: rendered
          emptyDir: {}
