apps/displayify/back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediamtx
  namespace: displayify
spec:
  selector:
    app: mediamtx
  ports:
    - name: rtmps
      port: 1936
      targetPort: 1936
    - name: rtmp
      port: 1935
      targetPort: 1935
      protocol: TCP
    - name: webrtc
      port: 8889
      targetPort: 8889
    - name: webrtc-udp
      port: 8189
      targetPort: 8189
      protocol: UDP
    - name: webrtc-tcp
      port: 8189
      targetPort: 8189
      protocol: TCP
