apps/displayify/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: displayify
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
