apps/displayify/ingress-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediamtx-lb
  namespace: displayify
spec:
  type: LoadBalancer
  selector:
    app: mediamtx
  ports:
    - name: rtmp
      port: 1935
      targetPort: 1935
    - name: rtmps
      port: 1936
      targetPort: 1936
